# raytrace-challenge

./: .gitignore  CMakeLists.txt  Dependencies.cmake  ProjectOptions.cmake
cmake/: Cache.cmake  CompilerWarnings.cmake  Hardening.cmake  InterproceduralOptimization.cmake  Linker.cmake  PreventInSourceBuilds.cmake  Sanitizers.cmake  StandardProjectSettings.cmake  StaticAnalyzers.cmake  SystemLink.cmake  Tests.cmake
configured_files/: CMakeLists.txt  config.hpp.in
include/ray/: raycommon.hpp
src/: CMakeLists.txt
src/main_program/: CMakeLists.txt
src/main_program/src/: main.cpp
src/raycommon/: CMakeLists.txt
src/raycommon/inc/: raycommon.h
src/raycommon/src/: raycommon.cpp
tests/: CMakeLists.txt  tests.cpp
